@@ -20,7 +20,8 @@ n-i-bz Improved thread startup time significantly on non-Linux platforms.
 * Replacement/wrapping of malloc/new related functions is now done not just
   for system libraries by default, but for any globally defined malloc/new
   related function (both in shared libraries and staticly linked alternative
-  malloc implementations). To only intercept malloc/new related functions in
+  malloc implementations). Dynamic (runtime) linker is excluded, though.
+  To only intercept malloc/new related functions in
   system libraries use --soname-synonyms=somalloc=nouserintercepts (where
   "nouserintercepts" can be any non-existing library name).
   This new functionality is not implemented for darwin/macosx.
@@ -52,6 +53,7 @@ where XXXXXX is the bug number as listed below.
 354933  Fix documentation of --kernel-variant=android-no-hw-tls option
 355188  valgrind should intercept all malloc related global functions
 355455  expected stderr of test cases wrapmalloc and wrapmallocstatic overconstrained
+355454  do not intercept malloc related symbols from the runtime linker
 
 
 Release 3.11.0 (22 September 2015)
